--- a/src/Styles/variables.scss
+++ b/src/Styles/variables.scss
@@ -1,4 +1,6 @@
 // box-shadows
+$elevation-box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%),
+  0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
 $box-shadow: 0px 3px 5px -1px rgb(0 0 0 / 20%),
   0px 6px 10px 0px rgb(0 0 0 / 14%), 0px 1px 18px 0px rgb(0 0 0 / 12%);
 
@@ -7,9 +9,9 @@ $white: #ffffff;
 $black: #000000;
 $white-smoke: #f5f5f5;
 
-
 $box-shadow: (
   "primary": $box-shadow,
+  "elevation": $elevation-box-shadow,
 );
 
 $spacing: (
