added, modal component and svg mock

--- a/src/Styles/variables.scss
+++ b/src/Styles/variables.scss
@@ -7,7 +7,9 @@ $box-shadow: 0px 3px 5px -1px rgb(0 0 0 / 20%),
 // colors
 $white: #ffffff;
 $black: #000000;
+$light-grey: #e8e8e8;
 $white-smoke: #f5f5f5;
+$black-opacity: rgba(0, 0, 0, 0.5);
 
 $box-shadow: (
   "primary": $box-shadow,
