--- a/src/Styles/variables.scss
+++ b/src/Styles/variables.scss
@@ -9,6 +9,7 @@ $white: #ffffff;
 $black: #000000;
 $light-grey: #e8e8e8;
 $white-smoke: #f5f5f5;
+$yellow: #ffdf00;
 $black-opacity: rgba(0, 0, 0, 0.5);
 
 $box-shadow: (
